--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "cb6d40ba-6026-4b87-a3e3-c46a1d25166d"
 authors = ["Andreas Hildebrandt <andreas.hildebrandt@uni-mainz.de> and contributors"]
 version = "0.1.0"
 
+[deps]
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+
 [compat]
 julia = "1.4"
 
